[tool.poetry]
name = "Apos-Backend"
version = "0.1.0"
description = ""
authors = ["Arne Beer <contact@arne.beer>", "Timon Engelke <contact@timonengelke.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
