[tool.poetry]
name = "Apos-Backend"
version = "0.1.0"
description = ""
authors = ["Arne Beer <contact@arne.beer>", "Timon Engelke <contact@timonengelke.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.1"
psycopg2 = "^2.8.4"
Flask-SQLAlchemy = "^2.4.1"
Flask-Migrate = "^2.5.2"
flask_script = "^2.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
