[tool.poetry]
name = "Apos-Backend"
version = "0.1.0"
description = ""
authors = ["Arne Beer <contact@arne.beer>", "Timon Engelke <contact@timonengelke.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.1"
psycopg2 = {version = "^2.8.4", optional = true}
Flask-SQLAlchemy = "^2.4.1"
Flask-Migrate = "^2.5.2"
flask_script = "^2.0.6"
flask-bcrypt = "^0.7.1"
flask-jwt-extended = "^3.24.1"
flask-restful = "^0.3.8"
flask-httpauth = "^3.3.0"
pytest = "^5.3.5"

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
postgres = ["psycopg2"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
